--- a/html/system/statue.html
+++ b/html/system/statue.html
@@ -264,6 +264,7 @@
             </tr>
           </tbody>
         </table>
+        <p>● Golden Intervals only.</p>
         <div class="item_details">
           <h2>Statue Details</h2>
           <h3 id="scout">Scout Statue</h3>
