added ally page, some cleanup

--- a/html/system/monster.html
+++ b/html/system/monster.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
     <title>Monsters - Shiren 2 Wiki</title>
     <link rel="icon" href="/shiren2/favicon.ico">
@@ -9,7 +10,7 @@
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../../css/index.css">
     <link rel="stylesheet" href="../../css/monster.css">
-    <script type="text/javascript" src="../../js/common.js"></script>
+    <script src="../../js/common.js"></script>
   </head>
   <body>
     <div class="wrapper">
@@ -292,9 +293,9 @@
             <h2 id="normal">Normal</h2>
             <h3 id="mamel_family">Mamel Family  (マムル, あなぐらマムル, 洞窟マムル)</h3>
             <div class="monster_images">
-              <img src="../../image/monster/mamel.png" width="54" height="43">
-              <img src="../../image/monster/pit_mamel.png" width="54" height="43">
-              <img src="../../image/monster/cave_mamel.png" width="54" height="43">
+              <img src="../../image/monster/mamel.png" width="54" height="43" alt="mamel">
+              <img src="../../image/monster/pit_mamel.png" width="54" height="43" alt="pit_mamel">
+              <img src="../../image/monster/cave_mamel.png" width="54" height="43" alt="cave_mamel">
             </div>
             <div class="family_desc">
               Mascot monster of the Shiren series.<br>Cave Mamels in Shiren 2 have somewhat lower defense than in other games.
@@ -402,9 +403,9 @@
             </table>
             <h3 id="chintala_family">Chintala Family  (チンタラ, ちゅうチンタラ, おおチンタラ)</h3>
             <div class="monster_images">
-              <img src="../../image/monster/chintala.png" width="68" height="92">
-              <img src="../../image/monster/mid_chintala.png" width="68" height="92">
-              <img src="../../image/monster/big_chintala.png" width="68" height="92">
+              <img src="../../image/monster/chintala.png" width="68" height="92" alt="chintala">
+              <img src="../../image/monster/mid_chintala.png" width="68" height="92" alt="mid_chintala">
+              <img src="../../image/monster/big_chintala.png" width="68" height="92" alt="big_chintala">
             </div>
             <div class="family_desc">
               The secondary mascot monster of the Shiren series.<br>A notable characteristic is that it grows larger with each increase in rank.
@@ -512,9 +513,9 @@
             </table>
             <h3 id="piko_hammer_family">Piko Hammer Family  (ピコタン, ポコタン, パコタン)</h3>
             <div class="monster_images">
-              <img src="../../image/monster/piko_hammer.png" width="58" height="67">
-              <img src="../../image/monster/poko_hammer.png" width="58" height="67">
-              <img src="../../image/monster/pako_hammer.png" width="58" height="67">
+              <img src="../../image/monster/piko_hammer.png" width="58" height="67" alt="piko_hammer">
+              <img src="../../image/monster/poko_hammer.png" width="58" height="67" alt="poko_hammer">
+              <img src="../../image/monster/pako_hammer.png" width="58" height="67" alt="pako_hammer">
             </div>
             <div class="family_desc">
               A unique monster that breaks traps and statues in a single hit.<br>This ability is beneficial for most dungeons, but can prove to be a nuisance in Halfway Well (Trap dungeon).<br>Higher ranks can only naturally be found in Halfway Well.<br>Only breaks traps that it can see, so it won't break traps that are only visible to Shiren from eating Sight Grass or equipping a Trapper Bracelet.
@@ -622,9 +623,9 @@
             </table>
             <h3 id="armordillo_family">Armordillo Family  (マルジロウ, マルジロウ兄, マルジロウ父)</h3>
             <div class="monster_images">
-              <img src="../../image/monster/armordillo.png" width="58" height="69">
-              <img src="../../image/monster/armordillo_bro.png" width="58" height="69">
-              <img src="../../image/monster/armordillo_pop.png" width="58" height="69">
+              <img src="../../image/monster/armordillo.png" width="58" height="69" alt="armordillo">
+              <img src="../../image/monster/armordillo_bro.png" width="58" height="69" alt="armordillo_bro">
+              <img src="../../image/monster/armordillo_pop.png" width="58" height="69" alt="armordillo_pop">
             </div>
             <div class="family_desc">
               Monster that resembles an armadillo.<br>Occasionally rolls into a ball and tackles Shiren, making him trip and drop items.<br>Particularly troublesome when there is water, because items dropped in water may be unrecoverable without items such as Evaporate Scroll.<br>Carrying a Balance Staff will prevent tripping, as long as it's not inside a Pot.
@@ -6841,6 +6842,7 @@
             </table>
           </div>
         </div>
+      </div>
       <div id="footer" class="box footer"></div>
     </div>
   </body>
