--- a/html/system/seal.html
+++ b/html/system/seal.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="../../css/index.css">
     <link rel="stylesheet" href="../../css/item.css">
     <link rel="stylesheet" href="../../css/seal.css">
-    <script type="text/javascript" src="../../js/common.js"></script>
+    <script src="../../js/common.js"></script>
   </head>
   <body>
     <div class="wrapper">
