--- a/html/system/castle.html
+++ b/html/system/castle.html
@@ -10,7 +10,7 @@
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../../css/index.css">
     <link rel="stylesheet" href="../../css/item.css">
-    <script type="text/javascript" src="../../js/common.js"></script>
+    <script src="../../js/common.js"></script>
   </head>
   <body>
     <div class="wrapper">
