--- a/html/system/monster.html
+++ b/html/system/monster.html
@@ -734,10 +734,10 @@
             </table>
             <h3 id="droplet_ninja_family">Droplet Ninja Family  (スイテキマル, ジライヤ, ショウカンマル, ダイジライヤ)</h3>
             <div class="monster_images">
-              <img src="../../image/monster/droplet_ninja.png" width="48" height="81">
-              <img src="../../image/monster/landmine_ninja.png" width="48" height="81">
-              <img src="../../image/monster/summon_ninja.png" width="48" height="81">
-              <img src="../../image/monster/explosion_ninja.png" width="48" height="81">
+              <img src="../../image/monster/droplet_ninja.png" width="48" height="81" alt="droplet_ninja">
+              <img src="../../image/monster/landmine_ninja.png" width="48" height="81" alt="landmine_ninja">
+              <img src="../../image/monster/summon_ninja.png" width="48" height="81" alt="summon_ninja">
+              <img src="../../image/monster/explosion_ninja.png" width="48" height="81" alt="explosion_ninja">
             </div>
             <div class="family_desc">
               A ninja-like monster that appears often early game.<br>Occasionally drops traps when defeated, with the type of trap being based on its level.<br>Can be troublesome if it drops a trap in a hallway.<br>Doesn't drop a trap if the ground below it is occupied by an item or stairs.
@@ -868,9 +868,9 @@
             </table>
             <h3 id="mr_drone_family">Mr. Drone Family  (Mr.ブーン, Mr.ヘリコ, Mr.ジャイロ)</h3>
             <div class="monster_images">
-              <img src="../../image/monster/mr_drone.png" width="68" height="71">
-              <img src="../../image/monster/mr_helico.png" width="68" height="71">
-              <img src="../../image/monster/mr_gyro.png" width="68" height="71">
+              <img src="../../image/monster/mr_drone.png" width="68" height="71" alt="mr_drone">
+              <img src="../../image/monster/mr_helico.png" width="68" height="71" alt="mr_helico">
+              <img src="../../image/monster/mr_gyro.png" width="68" height="71" alt="mr_gyro">
             </div>
             <div class="family_desc">
               A vegetable-like monster that flies using a propeller on its head.<br>Runs away from Shiren, and has a high chance to drop beneficial grass when defeated.<br>Prioritizes running away, similar to Snacky.<br>The item drop will be lost if defeated over water.
@@ -979,9 +979,9 @@
             </table>
             <h3 id="stone_beast_family">Stone Beast Family  (岩獣ズドン, 岩獣ガガン, 岩獣ドガガーン)</h3>
             <div class="monster_images">
-              <img src="../../image/monster/stone_beast.png" width="102" height="106">
-              <img src="../../image/monster/rock_beast.png" width="102" height="106">
-              <img src="../../image/monster/boulder_beast.png" width="102" height="106">
+              <img src="../../image/monster/stone_beast.png" width="102" height="106" alt="stone_beast">
+              <img src="../../image/monster/rock_beast.png" width="102" height="106" alt="rock_beast">
+              <img src="../../image/monster/boulder_beast.png" width="102" height="106" alt="boulder_beast">
             </div>
             <div class="family_desc">
               Monster that body slams targets, making them fly away from the impact.<br>Lv2+ Stone Beast body slams can break through walls and leave targets paralyzed. (Shiren: 3 turns, Enemies: 2 turns)<br>Each collision with a wall tile deals 5 damage, so having a 弟 seal helps mitigate that damage.<br>Be careful not to trigger a robbery by being sent outside of a shop due to a body slam.<br>A body slam in a diagonal direction won't break walls.
@@ -1089,9 +1089,9 @@
             </table>
             <h3 id="copycat_mask_family">Copycat Mask Family  (ものまね仮面, ふるまいカブリ, なりきりマスク)</h3>
             <div class="monster_images">
-              <img src="../../image/monster/copycat_mask.png" width="84" height="100">
-              <img src="../../image/monster/trickster_mask.png" width="84" height="100">
-              <img src="../../image/monster/impostor_mask.png" width="84" height="100">
+              <img src="../../image/monster/copycat_mask.png" width="84" height="100" alt="copycat_mask">
+              <img src="../../image/monster/trickster_mask.png" width="84" height="100" alt="trickster_mask">
+              <img src="../../image/monster/impostor_mask.png" width="84" height="100" alt="imposter_mask">
             </div>
             <div class="family_desc">
               Disguises itself as other monsters, but can't copy their special attacks or stats.<br>Its disguise will be disabled when sealed, and you can also identify them by swinging a Knowledge Staff.<br>Never disguises itself as Dosukoi, Gamarra, Zalokleft, Orcan, Spearfish, or N'dubba family monsters.<br>Mixergons on 50~80F inside the Road to the End dungeon could actually be a disguised Mask monster.<br>It's also good to seal a monster before throwing an Extinction Scroll, just to be sure it's not actually one of these.<br>Never spawns asleep, so sleeping monsters are always their real selves. (Excluding monster houses)<br>You know it's one of these if a flying or amphibious monster is unable to move over or inside water, or if a double/triple speed mosnter is moving at regular speed.<br>
@@ -1199,9 +1199,9 @@
             </table>
             <h3 id="schubell_family">Schubell Family  (シューベル, メンベルス, ベルトーベン)</h3>
             <div class="monster_images">
-              <img src="../../image/monster/schubell.png" width="58" height="62">
-              <img src="../../image/monster/menbell.png" width="58" height="62">
-              <img src="../../image/monster/bellthoven.png" width="58" height="62">
+              <img src="../../image/monster/schubell.png" width="58" height="62" alt="schubell">
+              <img src="../../image/monster/menbell.png" width="58" height="62" alt="menbell">
+              <img src="../../image/monster/bellthoven.png" width="58" height="62" alt="bellthoven">
             </div>
             <div class="family_desc">
               Monster that rings a bell to summon monsters.<br>Summoned monsters are based on the current floor's monster table.<br>The summoned monster matches the level of the Schubell family monster that summoned it.<br>Always performs regular attacks when there isn't enough room to summon other monsters.<br>It appears Schubell and Menbell cannot summon the following monster families: Schubell, Mixer, Copycat Mask, Dosukoi, Taurus, N'dubba, Spearfish, Orcan, Aqua Dragon, Shotfish, Tiny Phoenix, Escargon, Queen Spider.
@@ -1310,9 +1310,9 @@
             </table>
             <h3 id="dosukoi_family">Dosukoi Family  (ドスコーイ, ハッキョーイ, ゴッツァーン)</h3>
             <div class="monster_images">
-              <img src="../../image/monster/dosukoi.png" width="130" height="96">
-              <img src="../../image/monster/hakkeyoi.png" width="130" height="96">
-              <img src="../../image/monster/gottsuan.png" width="130" height="96">
+              <img src="../../image/monster/dosukoi.png" width="130" height="96" alt="dosukoi">
+              <img src="../../image/monster/hakkeyoi.png" width="130" height="96" alt="hakkeyoi">
+              <img src="../../image/monster/gottsuan.png" width="130" height="96" alt="gottsuan">
             </div>
             <div class="family_desc">
               A monster that resembles a sumo wrestler. Appears in post-game dungeons.<br>Occasionally stomps the ground, shuffling stuff in the room. (Lv1: items, Lv2: characters, Lv3: items and characters)<br>Can push statues around, and Gottsuan can also push stairs.<br>Traps will always trigger if a character lands on one as a result of Hakkeyoi or Gottsuan stomping the ground.<br>Prioritizes moving toward and pushing statues or stairs over Shiren.<br>Doesn't stomp while pushing statues or stairs.<br>Items in shops won't move as a result of the ground being stomped.
@@ -1420,7 +1420,7 @@
             </table>
             <h3 id="snacky">Snacky  (タベラレルー)</h3>
             <div class="monster_images">
-              <img src="../../image/monster/snacky.png" width="54" height="53">
+              <img src="../../image/monster/snacky.png" width="54" height="53" alt="snacky">
             </div>
             <div class="family_desc">
               A cute monster that resembles a ball with wings and heart-shaped feet.<br>Has a tendency to be defeated by other monsters, which results in the attacking monster leveling up.<br>Appears around 1~20F of post-game dungeons, often creating Cave Mamels or Mid Chintalas on 1F of Road to the End.<br>Usually you'd want to defeat it before another monster has the chance to level up, but it can be used to gain more experience or capture higher level monsters for Monster Kingdom.<br>Runs away from Shiren, but attacks when there is nowhere else to run.
@@ -1482,7 +1482,7 @@
             </table>
             <h3 id="tiny_phoenix">Tiny Phoenix  (プチフェニックス)</h3>
             <div class="monster_images">
-              <img src="../../image/monster/tiny_phoenix.png" width="64" height="82">
+              <img src="../../image/monster/tiny_phoenix.png" width="64" height="82" alt="tiny_phoenix">
             </div>
             <div class="family_desc">
               A bird monster that has a body made of fire.<br>Warps to monsters that have received damage and restores 50 HP.<br>Immune to fire attacks, but still takes damage from explosions.
@@ -1544,7 +1544,7 @@
             </table>
             <h3 id="escargon">Escargon  (エスカルゴン)</h3>
             <div class="monster_images">
-              <img src="../../image/monster/escargon.png" width="68" height="79">
+              <img src="../../image/monster/escargon.png" width="68" height="79" alt="escargon">
             </div>
             <div class="family_desc">
               A small monster who hides inside a yellow shell. Capable of reflecting magic.<br>Warps in front of other monsters when Shiren tries to swing a staff at them.<br>You can work around this ability by swinging the staff when the target monster is directly next to you.
@@ -1606,7 +1606,7 @@
             </table>
             <h3 id="queen_spider">Queen Spider  (女王グモ)</h3>
             <div class="monster_images">
-              <img src="../../image/monster/queen_spider.png" width="118" height="112">
+              <img src="../../image/monster/queen_spider.png" width="118" height="112" alt="queen_spider">
             </div>
             <div class="family_desc">
               Boss of Shuten Trail Hard. Its special attack spawns 3 Armor Spiders.<br>Doesn't move when it appears as a boss, and uses its special no matter where Shiren is on the current floor.<br>Takes 200 damage from a pent-up-anger Surprise Pot, instantly defeating it.<br>Also appears inside the Shrine's Hidden Hole dungeon. (60F+)<br>Outside of the boss encounter, it will only use its special when Shiren is in front of it.
@@ -1669,7 +1669,7 @@
             </table>
             <h3 id="armor_spider">Armor Spider  (ヨロイグモ)</h3>
             <div class="monster_images">
-              <img src="../../image/monster/armor_spider.png" width="118" height="112">
+              <img src="../../image/monster/armor_spider.png" width="118" height="112" alt="armor_spider">
             </div>
             <div class="family_desc">
               Monster that gets spawned by Queen Spider. No special abilities.<br>Not too difficult 1-on-1, but Queen Spider will endlessly spawn them, so you can end up getting swarmed.<br>Appears on their own in later dungeons, starting in Onigashima.
@@ -1731,15 +1731,15 @@
             </table>
             <h3 id="ndubba">N'dubba  (ンドゥバ)</h3>
             <div class="monster_images">
-              <img src="../../image/monster/ndubba.png" width="82" height="74">
-              <img src="../../image/monster/ndubba_20.png" width="82" height="74">
-              <img src="../../image/monster/ndubba_30.png" width="82" height="74">
-              <img src="../../image/monster/ndubba_60.png" width="82" height="74">
-              <img src="../../image/monster/ndubba_70.png" width="82" height="74">
-              <img src="../../image/monster/ndubba_77.png" width="82" height="74">
-              <img src="../../image/monster/ndubba_88.png" width="82" height="74">
-              <img src="../../image/monster/ndubba_90.png" width="82" height="74">
-              <img src="../../image/monster/ndubba_99.png" width="82" height="74">
+              <img src="../../image/monster/ndubba.png" width="82" height="74" alt="ndubba">
+              <img src="../../image/monster/ndubba_20.png" width="82" height="74" alt="ndubba_20">
+              <img src="../../image/monster/ndubba_30.png" width="82" height="74" alt="ndubba_30">
+              <img src="../../image/monster/ndubba_60.png" width="82" height="74" alt="ndubba_60">
+              <img src="../../image/monster/ndubba_70.png" width="82" height="74" alt="ndubba_70">
+              <img src="../../image/monster/ndubba_77.png" width="82" height="74" alt="ndubba_77">
+              <img src="../../image/monster/ndubba_88.png" width="82" height="74" alt="ndubba_88">
+              <img src="../../image/monster/ndubba_90.png" width="82" height="74" alt="ndubba_90">
+              <img src="../../image/monster/ndubba_99.png" width="82" height="74" alt="ndubba_99">
             </div>
             <div class="family_desc">
               Monster that disguises itself as an item, and attacks when someone tries to pick it up.<br>It's possible to identify it by swinging a weapon that has the 識 seal toward a tile with an item.<br>N'dubba will vanish if the item limit has been reached for the current floor.<br>It's also possible to pick N'dubba up as an item under certain circumstances.<br>N'dubba ages as it levels up, with a maximum of 99 years old.<br>Each age has its own stats, and some age brackets have changes in movement speed.<br>One way to reduce the risk of collapsing from a surprise attack would be to reserve some HP before attempting to pick up items.<br>Monster Kingdom requires an N'dubba of every color for completion. The easiest way to capture them would be to search inside the Sealed Room dungeon, where the current floor number indicates the age of N'dubba that can be found on that floor. (ex: N'dubba 99yr = 99F)<br>Note that there's a bug related to swapping out N'dubba at Monster Kingdom.
@@ -1986,9 +1986,9 @@
             <h2 id="weapon">Weapon</h2>
             <h3 id="kengo_family">Kengo Family  (ケンゴウ, イアイ, シハン)</h3>
             <div class="monster_images">
-              <img src="../../image/monster/kengo.png" width="80" height="114">
-              <img src="../../image/monster/iai.png" width="80" height="114">
-              <img src="../../image/monster/shihan.png" width="80" height="114">
+              <img src="../../image/monster/kengo.png" width="80" height="114" alt="kengo">
+              <img src="../../image/monster/iai.png" width="80" height="114" alt="iai">
+              <img src="../../image/monster/shihan.png" width="80" height="114" alt="shihan">
             </div>
             <div class="family_desc">
               Monster that resembles a Samurai. The most disliked monster among player votes.<br>Its special attack flings Shiren or Asuka's equipment behind them with an iaigiri strike, including cursed equipment.<br>The only way to guarantee avoiding its special attack would be to either seal it or throw an Extinction Scroll at it, as Shiren 2 lacks bracelets that protect against having equipment disarmed.<br>Kengo doesn't have too high of an attack stat, so unequipping your shield can be a decent strategy.<br>You could also intentionally aim to have them disarm cursed equipment, but Iai and Shihan have very high attack, so you risk collapsing unless you pour water on them to lower their attack first.<br>Note that not even a Kaburasutegi+99 can defeat Shihan in a single hit, unless you've increased your strength.
@@ -6331,7 +6331,7 @@
                 </tr>
               </tbody>
             </table>
-            <h3 id="small_oni_family">Lanky Oni Family  (ヤセオニ, ヒョロオニ, ガリガリオニ)</h3>
+            <h3 id="lanky_oni_family">Lanky Oni Family  (ヤセオニ, ヒョロオニ, ガリガリオニ)</h3>
             <div class="monster_images">
               <img src="../../image/monster/lanky_oni.png" width="102" height="117">
               <img src="../../image/monster/slender_oni.png" width="102" height="117">
