layout of ally page

--- a/html/system/ally.html
+++ b/html/system/ally.html
@@ -18,7 +18,37 @@
       <div id="sidebar" class="box sidebar"></div>
       <div id="content" class="box content">
         <div>
-          
+          <h2 class="page_heading">Shiren's Allies</h2>
+          <p>Text</p>
+          <p>Quick Links</p>
+          <p>Text</p>
+          <h2>Characters</h2>
+          <h3>Himakichi</h3>
+          <p>Text</p>
+          <p>Table</p>
+          <p>Table</p>
+          <h3>Riku</h3>
+          <p>Text</p>
+          <p>Table</p>
+          <h3>Asuka</h3>
+          <p>Text</p>
+          <h3>Kirara</h3>
+          <p>Text</p>
+          <p>Table</p>
+          <h3>Mamo</h3>
+          <p>Text</p>
+          <h2>Dialogue</h2>
+          <p>Text</p>
+          <h3>Himakichi</h3>
+          <p>Table</p>
+          <h3>Riku</h3>
+          <p>Table</p>
+          <h3>Asuka</h3>
+          <p>Table</p>
+          <h3>Kirara</h3>
+          <p>Table</p>
+          <h3>Mamo</h3>
+          <p>Table</p>
         </div>
       <div id="footer" class="box footer"></div>
     </div>
