working on the ally page

--- a/html/index.html
+++ b/html/index.html
@@ -79,6 +79,7 @@
             / <a href="/shiren2/html/playing/secret_phrases.html">Secret Phrases</a><br>
             ┣ <a href="/shiren2/html/playing/gallery.html">Gallery</a>
             / <a href="/shiren2/html/playing/exp_stat.html">Exp &amp; Stats</a><br>
+            ┣ <a href="/shiren2/html/playing/faq.html">Story Progression</a><br>
             ┗ <a href="/shiren2/html/playing/restricted_play.html">Restricted Play</a>
           </div>
           <div class="sidebar-category">Links</div>
