--- a/html/system/ally.html
+++ b/html/system/ally.html
@@ -19,22 +19,159 @@
       <div id="content" class="box content">
         <div>
           <h2 class="page_heading">Shiren's Allies</h2>
-          <p>Text</p>
-          <p>Quick Links</p>
+          <p>Allies are NPC characters who fight monsters alongside Shiren.<br>Shiren 2 features five ally characters - Himakichi, Riku, Asuka, Kirara, and Mamo.<br>See the <a href="">Story Progression</a> page to check requirements for each character becoming your ally.</p>
+          <ul>
+            <li><a href="#characters">Characters</a></li>
+            <ul>
+              <li><a href="#himakichi">Himakichi</a></li>
+              <li><a href="#riku">Riku</a></li>
+              <li><a href="#asuka">Asuka</a></li>
+              <li><a href="#kirara">Kirara</a></li>
+              <li><a href="#mamo">Mamo</a></li>
+            </ul>
+            <li><a href="#dialogue">Dialogue</a></li>
+            <ul>
+              <li><a href="#himakichi_dialogue">Himakichi</a></li>
+              <li><a href="#riku_dialogue">Riku</a></li>
+              <li><a href="#asuka_dialogue">Asuka</a></li>
+              <li><a href="#kirara_dialogue">Kirara</a></li>
+              <li><a href="#mamo_dialogue">Mamo</a></li>
+            </ul>
+          </ul>
           <p>Text</p>
           <h2>Characters</h2>
           <h3>Himakichi</h3>
           <p>Text</p>
-          <p>Table</p>
-          <p>Table</p>
+          <table class="ally_table">
+            <thead>
+              <tr>
+                <th>Lv</th>
+                <th>Throw Range</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>1~30</td>
+                <td>5</td>
+              </tr>
+              <tr>
+                <td>31~60</td>
+                <td>7</td>
+              </tr>
+              <tr>
+                <td>61~99</td>
+                <td>9</td>
+              </tr>
+            </tbody>
+          </table>
+          <table class="ally_table">
+            <thead>
+              <tr>
+                <th>Grass / Seed<br>Himakichi Can Eat</th>
+                <th>Notes</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td><a href="">Boost Grass</a></td>
+                <td>-</td>
+              </tr>
+              <tr>
+                <td><a href="">Swift Grass</a></td>
+                <td>-</td>
+              </tr>
+              <tr>
+                <td><a href="">Herb</a></td>
+                <td>Increases max HP if he is at full HP.</td>
+              </tr>
+              <tr>
+                <td><a href="">Otogiriso</a></td>
+                <td>Increases max HP if he is at full HP.</td>
+              </tr>
+              <tr>
+                <td><a href="">Life Grass</a></td>
+                <td>-</td>
+              </tr>
+              <tr>
+                <td><a href="">Strength Grass</a></td>
+                <td>-</td>
+              </tr>
+              <tr>
+                <td><a href="">Happy Grass</a></td>
+                <td>-</td>
+              </tr>
+              <tr>
+                <td><a href="">Angel Seed</a></td>
+                <td>-</td>
+              </tr>
+              <tr>
+                <td><a href="">Dragon Grass</a></td>
+                <td>Eats only when he can attack with fire breath.</td>
+              </tr>
+              <tr>
+                <td><a href="">Flame Grass</a></td>
+                <td>Eats only when he can attack with fire breath.</td>
+              </tr>
+            </tbody>
+          </table>
           <h3>Riku</h3>
           <p>Text</p>
-          <p>Table</p>
+          <table class="ally_table">
+            <thead>
+              <tr>
+                <th>Lv</th>
+                <th>Slingshot Damage</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>1~9</td>
+                <td>4</td>
+              </tr>
+              <tr>
+                <td>10~14</td>
+                <td>6</td>
+              </tr>
+              <tr>
+                <td>15~19</td>
+                <td>8</td>
+              </tr>
+              <tr>
+                <td>20~29</td>
+                <td>10</td>
+              </tr>
+              <tr>
+                <td>30~99</td>
+                <td>15</td>
+              </tr>
+            </tbody>
+          </table>
           <h3>Asuka</h3>
           <p>Text</p>
           <h3>Kirara</h3>
           <p>Text</p>
-          <p>Table</p>
+          <table class="ally_table">
+            <thead>
+              <tr>
+                <th>Lv</th>
+                <th>Fire Damage</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>1~19</td>
+                <td>10</td>
+              </tr>
+              <tr>
+                <td>20~39</td>
+                <td>15</td>
+              </tr>
+              <tr>
+                <td>40~99</td>
+                <td>20</td>
+              </tr>
+            </tbody>
+          </table>
           <h3>Mamo</h3>
           <p>Text</p>
           <h2>Dialogue</h2>
