small correction on castle page

--- a/html/system/castle.html
+++ b/html/system/castle.html
@@ -41,7 +41,7 @@
           <p>As the story progresses, Oni will occasionally attack the castle, potentially breaking sections of the castle.<br>The way to counter that is to use higher grade materials to build break-resistant castle parts.</p>
           <h3 id="castle_materials">Castle Materials</h3>
           <p>The 5 categories of materials are "Soil", "Water", "Wood", "Rock", and "Iron Sand",<br>and the 3 grades of materials are "Normal", "Good", and "Perfect".<br>These materials can be used as regular items as well. (<a href="">Materials</a> page for details).</p>
-          <p>On a side note, <strong>Perfect grade materials take up 2 inventory slots</strong>.<br>Materials cannot be inserted into pots, but can be deposited by Mamo.<br>The locations of each category and grade of material is shown in the following table:</p>
+          <p>On a side note, <strong>Perfect grade materials take up 2 inventory slots</strong>.<br>Materials cannot be inserted into pots, but can be given to <a href="">Mamo</a>.<br>The locations of each category and grade of material is shown in the following table:</p>
           <table class="material_table">
             <thead>
               <tr>
@@ -213,7 +213,7 @@
           </dl>
           <dl>
             <dt>2. Ride the Cart to Shuten Halfway</dt>
-            <dd>Deposit all of your items to Mamo, and don't forget to bring Mamo along.</dd>
+            <dd>Give all of your items to Mamo, and don't forget to bring Mamo along.</dd>
           </dl>
           <dl>
             <dt>3. Proceed to Shuten Mid or Hard for Perfect Materials</dt>
